# appre-services

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  build-all.sh  sync-config.sh
authentication/: Cargo.toml
authentication/cdk/: README.md  SESSION_TABLE.md  build.sh  cdk.json  cdk.sh  deploy.sh  get-outputs.sh  package.json  pnpm-lock.yaml
authentication/cdk/lib/: authentication-stack.d.ts  authentication-stack.js  authentication-stack.ts
authentication/cdk/lib/constructs/: session-table.d.ts  session-table.js  session-table.ts
authentication/lambda/: Cargo.toml  README.md  build.sh
authentication/lambda/create-auth-challenge/: Cargo.toml
authentication/lambda/create-auth-challenge/src/: main.rs
authentication/lambda/define-auth-challenge/: Cargo.toml
authentication/lambda/define-auth-challenge/src/: main.rs
authentication/lambda/pre-signup/: Cargo.toml
authentication/lambda/pre-signup/src/: main.rs
authentication/lambda/shared/: Cargo.toml
authentication/lambda/shared/src/: errors.rs  lib.rs  services.rs  utils.rs
authentication/lambda/shared/src/services/: dynamodb_service.rs  rate_limit_service.rs  ses_service.rs
authentication/lambda/verify-auth-challenge/: Cargo.toml
authentication/lambda/verify-auth-challenge/src/: main.rs
authentication/shared/: Cargo.toml
authentication/shared/src/: lib.rs  models.rs  naming.rs  services.rs
authentication/shared/src/services/: dynamodb_service.rs  rate_limit_service.rs  ses_service.rs
docs/: iam-security-enhancements.md  session-management.md
docs/devops/: aws-ses.md
notifications/: Cargo.toml  README.md  package.json  pnpm-lock.yaml
notifications/cdk/: cdk.json  package.json  pnpm-lock.yaml  test-naming.js
notifications/cdk/lib/: notification-stack.d.ts  notification-stack.js  notification-stack.ts
notifications/lambda/email-processor/: Cargo.toml
notifications/lambda/email-processor/src/: main.rs
notifications/shared/: Cargo.toml
notifications/shared/src/: errors.rs  lib.rs  models.rs  naming.rs  services.rs
notifications/shared/src/services/: email_service.rs  queue_service.rs
notifications/tests/: integration_test.rs
scripts/: README.md
scripts/authentication/: README.md  delete-user-by-email.sh
scripts/aws/: delete-authentication-stack.sh  delete-notification-stack.sh  deploy-authentication-stack.sh  get-authentication-stack-outputs.sh
scripts/aws/dynamo/: delete-dynamo-user-by-email.sh
scripts/aws/ses/: diagnose-ses.js  test-ses-direct.js  test-ses-lambda.js  test-template-content.js
scripts/local/: build-authentication-cdk-stack.sh  build-authentication-lambdas.sh  build-notification-cdk-stack.sh  build-notification-lambdas.sh  test-stack-iam-security.js
shared-infrastructure/: dynamodb-stack.ts
shared/cdk-utils/: README.md  jest.config.js  package.json  pnpm-lock.yaml  tsconfig.json
shared/cdk-utils/lib/: config.d.ts  config.js  index.js  naming.d.ts  naming.js  tagging.js  utils.js
shared/cdk-utils/src/: config.js  config.test.ts  config.ts  index.d.ts  index.js  index.ts  naming.js  naming.test.ts  naming.ts  tagging.d.ts  tagging.js  tagging.test.ts  tagging.ts  utils.d.ts  utils.js  utils.ts
