[workspace]
resolver = "2"
members = [
    "shared",
    "lambda/email-processor"
]

[workspace.dependencies]
# AWS Lambda Runtime
lambda_runtime = "0.8"
lambda_web = "0.2"
aws_lambda_events = "0.10"

# AWS SDK
aws-config = "1.0"
aws-sdk-sqs = "1.0"
aws-sdk-ses = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }