[package]
name = "auth-shared"
version = "0.1.0"
edition = "2021"

[dependencies]
# Inherit from workspace
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws-sdk-ses = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }

# Local dependencies
notifications-shared = { path = "../../notifications/shared" }