[package]
name = "notifications-shared"
version = "0.1.0"
edition = "2021"

[dependencies]
# Inherit from workspace
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
aws-sdk-sqs = { workspace = true }
aws-sdk-ses = { workspace = true }
tracing = { workspace = true }

# Local dependencies