[package]
name = "define-auth-challenge"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "define-auth-challenge"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
lambda_runtime = { workspace = true }
aws_lambda_events = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Local shared library
auth-shared = { path = "../../shared" }