[package]
name = "verify-auth-challenge"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "verify-auth-challenge"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
lambda_runtime = { workspace = true }
aws_lambda_events = { workspace = true }
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws-sdk-cognitoidentityprovider = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Local shared library
auth-shared = { path = "../shared" }