[package]
name = "email-processor"
version = "0.1.0"
edition = "2021"

[dependencies]
# Inherit from workspace
lambda_runtime = { workspace = true }
aws_lambda_events = { workspace = true }
aws-config = { workspace = true }
aws-sdk-ses = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Local shared library
notifications-shared = { path = "../../shared" }